 -- Strip ANSI from messages before matching messages against @filter
    and @infilter patterns.
 -- Zap trailing NL in help topics.
 -- Added help topic for HTML flag.
 -- When listening on multiple ports, continue to run the server as long
    as one of the requested ports is available.
 -- mix() doesn't include a function-invocation test (Issue 71).
 -- Examples in help topics show old-style 'say' (Issue 72).
 -- Attribute-level tracing does not report sortby() comparisons
    (Issue 73).
 -- @email help doesn't mention @mail addy/subject=body form (Issue 86).
 -- @email - do {} while () to simplify the sources and reduce the
    sizeof the program (Issue 79).
 -- @email - MUX_VERSION replaced with mudstate.short_ver (Issue 78).
 -- @email - mod_email_sock_readline() adds a '\0' one position too far
    (Issue 87).
 -- @email - Remove unnecessary zeroing of buffers (Issue 80).
 -- @email - Typo in do_plusmail of '0' instead of '\0' (Issue 90).
 -- @email - Unnecessary strlen() (Issue 81).
 -- @email - do_plusmail loops look at undefined bytes if inputline is
    1, 2, or 3 bytes long (Issue 89). 
 -- @email - Memory leaks (Issue 84).
 -- Fix SIGSEGV when udefault() gets more than 12 arguments.  Fixed by
    Alierak.
 -- @email - initialize input buffer to the empty string to cover
    return(0) error cases.  Probably introduced by Issue 80 fix.  Fixed
    by Alierak.
 -- @email - Comment doesn't match code (Issue 82).
 -- %v accepts accented characters (Issue 91).  Found by Alierak.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.

Cosmetic Changes:
~~~~~~~~~~~~~~~~


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().