@@ -134,6 +134,7 @@ Bug Fixes:
     by Alierak.
  -- @email - Comment doesn't match code (Issue 82).
  -- %v accepts accented characters (Issue 91).  Found by Alierak.
+ -- sortby() breaks when nested (Issue 88).  Found by Alierak.
 
 
 Performance Enhancements:
